--- a/.gitmodules
+++ b/.gitmodules
@@ -72,7 +72,7 @@
 	branch = master
 [submodule "ec"]
 	path = ec
-	url = https://github.com/system76/ec.git
+	url = https://github.com/Vitamin-X/ec.git
 	branch = master
 [submodule "tools/apobtool"]
 	path = tools/apobtool
